# casadi-bindings

./: .gitignore  CasadiTree.hs  Makefile  README.md  Types.hs  WriteBindings.hs  WriteC.hs  WriteHs.hs  WriteSomeCasadi.hs  casadi-bindings.cabal  test.hs
Casadi/: Callback.hs  CppHelpers.hs  Marshal.hs  MarshalTypes.hs  WrapReturn.hs
CasadiBindings/: ForeignTools.hs  Marshal.hs  MarshalTypes.hs  WrapReturn.hs  WriteForeignTools.hs
WriteBindings/: CustomWrappers.hs  MyCasadiTree.hs  ParseJSON.hs  TypeMaps.hs  Types.hs  WriteC.hs  WriteCTools.hs  WriteForeignTools.hs  WriteHs.hs  WritePackage.hs  custom_wrappers.cpp  marshal.hpp
WriteCasadiBindings/: MyCasadiTree.hs  TypeMaps.hs  Types.hs  WriteC.hs  WriteHs.hs
WriteCasadiBindings/Buildbot/: .gitignore
casadi-bindings/: casadi-bindings.cabal  stack.yaml
casadi-bindings-internal/: casadi-bindings-internal.cabal  stack.yaml
casadi-bindings-internal/cbits/: callback.cpp  hs_tools.cpp
casadi-bindings-internal/src/Casadi/Internal/: CToolsImports.hs  CToolsInstances.hs  Callback.hs  CppHelpers.hs  FormatException.hs  Marshal.hs  MarshalTypes.hs  Tools.hs  WrapReturn.hs
casadi-bindings/cbits/: casadi_bindings.cpp  handwritten.cpp
casadi-bindings/src/Casadi/: CMatrix.hs  Callback.hs  DM.hs  DMatrix.hs  Function.hs  GenericC.hs  GenericType.hs  IOScheme.hs  IOSchemes.hs  Interpolant.hs  MX.hs  MXFunction.hs  Matrix.hs  Option.hs  Overloading.hs  SX.hs  SXElement.hs  SXFunction.hs  SharedObject.hs  Slice.hs  Sparsity.hs  Viewable.hs
casadi-bindings/tests/: CallbackTests.hs  GTypeTests.hs  UnitTests.hs  doctests.hs
cbits/: callback.cpp  hs_tools.cpp  hs_tools.hpp  marshal.hpp  marshall.cpp  marshall.hpp
dist-src/: Marshal.hs  Marshall.hs
generate-casadi-bindings/: LICENSE  generate-casadi-bindings.cabal  stack.yaml
generate-casadi-bindings/src/: WritePackage.hs
generate-casadi-bindings/src/WriteBindings/: ParseJSON.hs  TypeMaps.hs  WriteC.hs  WriteCTools.hs  WriteHs.hs  custom_wrappers.cpp
genpath/casadi-bindings-core/: casadi-bindings-core.cabal  stack.yaml
genpath/casadi-bindings-core/Casadi/Core/: CustomWrappers.hs  Data.hs  Enums.hs  Tools.hs
genpath/casadi-bindings-core/Casadi/Core/Classes/: Callback.hs  CasadiMeta.hs  CodeGenerator.hs  DM.hs  DaeBuilder.hs  Function.hs  GenericExpressionCommon.hs  GenericMatrixCommon.hs  GenericType.hs  GlobalOptions.hs  IM.hs  Importer.hs  IndexAbstraction.hs  Linsol.hs  MX.hs  MatrixCommon.hs  MetaCon.hs  MetaVar.hs  NlpBuilder.hs  Opti.hs  OptiAdvanced.hs  OptiCallback.hs  OptiSol.hs  PrintableCommon.hs  SX.hs  SXElem.hs  SharedObject.hs  Slice.hs  Sparsity.hs  SparsityInterfaceCommon.hs  Variable.hs  WeakRef.hs  XmlFile.hs
genpath/casadi-bindings-core/cbits/: marshal.hpp
genpath/casadi-bindings-core/cbits/autogen/: casadi_wrap_classes.cpp  casadi_wrap_functions.cpp
src/: .gitignore  CasadiTree.hs  TypeMaps.hs  Types.hs  WriteC.hs  WriteHs.hs  WriteSomeCasadi.hs
wrappers/: Makefile  WriteBindings.hs  casadi-bindings.cabal
wrappers/Casadi/: Callback.hs  Marshal.hs  WrapReturn.hs
wrappers/Casadi/Wrappers/: .gitignore  HsToC.hs  Marshal.hs  MarshalTypes.hs  WrapReturn.hs
wrappers/Casadi/Wrappers/Autogen/: .gitignore
wrappers/CasadiBindings/: MarshalTypes.hs  WrapReturn.hs
wrappers/WriteCasadiBindings/: MyCasadiTree.hs  TypeMaps.hs  Types.hs  WriteC.hs  WriteForeignTools.hs  WriteHs.hs
wrappers/cbits/: callback.cpp  cfunction.cpp  hs_tools.cpp  hs_tools.hpp  marshal.cpp  marshal.hpp
