name:                casadi-bindings
version:             0.1.0.0
synopsis:            low level bindings to CasADi
-- description:
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, vector >=0.10 && <0.11

  -- hs-source-dirs:
  default-language:    Haskell2010

--  hs-source-dirs:
  Include-dirs:   /usr/include/casadi
                  /usr/share/casadi

  extra-lib-dirs:   /usr/lib
  extra-libraries:  stdc++
                    casadi_ipopt_interface
                    casadi_ipopt
                    dl
                    casadi_coinmumps
                    pthread
                    casadi_coinlapack
                    casadi_coinmetis
                    casadi_coinblas
                    gfortran
                    m
                    gcc_s
                    quadmath
                    casadi_sundials_interface
                    casadi_sundials
                    casadi_csparse_interface
                    casadi_csparse
                    casadi_optimal_control
                    casadi_tinyxml
                    casadi_integration
                    casadi_convex_programming
                    casadi_nonlinear_programming
                    casadi
                    dl
--                    /usr/lib/x86_64-linux-gnu/librt.so

  ghc-options: -O2
  cc-options: -O2 -Wall -Wno-delete-non-virtual-dtor

  C-sources:        cbits/hs_tools.cpp
                    cbits/callback.cpp
                    cbits/autogen/all.cpp

  other-modules:       Casadi.Marshal
                       Casadi.MarshalTypes
                       Casadi.WrapReturn
                       Casadi.Wrappers.ForeignToolsImports
                       Casadi.Wrappers.ForeignToolsInstances
                       Casadi.Wrappers.Data
                       Casadi.Wrappers.Deleters

  exposed-modules:     
                       Casadi.Callback
                       Casadi.Wrappers.Tools
                       Casadi.Wrappers.Enums
                       Casadi.Wrappers.Classes.SXFunction
                       Casadi.Wrappers.Classes.MXFunction
                       Casadi.Wrappers.Classes.FX
                       Casadi.Wrappers.Classes.SharedObject
                       Casadi.Wrappers.Classes.PrintableObject
                       Casadi.Wrappers.Classes.CRSSparsity
                       Casadi.Wrappers.Classes.FunctionIO
                       Casadi.Wrappers.Classes.GenericType
                       Casadi.Wrappers.Classes.IOInterfaceFX
                       Casadi.Wrappers.Classes.OptionsFunctionality
                       Casadi.Wrappers.Classes.IpoptSolver
                       Casadi.Wrappers.Classes.SXMatrix
                       Casadi.Wrappers.Classes.IOScheme
                       Casadi.Wrappers.Classes.DMatrix
                       Casadi.Wrappers.Classes.MX
                       Casadi.Wrappers.Classes.CasadiOptions
                       Casadi.Wrappers.Classes.Callback
                       Casadi.Wrappers.Classes.CustomEvaluate
                       Casadi.Wrappers.Classes.ExternalFunction
                       Casadi.Wrappers.Classes.CSparse
                       Casadi.Wrappers.Classes.SX
                       Casadi.Wrappers.Classes.CasadiMeta
                       Casadi.Wrappers.Classes.Functor
                       Casadi.Wrappers.Classes.CustomFunction
